tests/snapshots/backends_jni_gen_shims_test__snapshot_full_lib_rs.snap
---
source: tests/backends_jni_gen_shims_test.rs
expression: "&lib.content"
---
// Generated by alef. Do not edit by hand.
//
// JNI shim for the Android AAR. Every `pub unsafe extern "system" fn`
// here matches one `external fun native*` in the paired Kotlin Bridge object.

#![allow(non_snake_case)]
#![allow(clippy::too_many_arguments)]
#![allow(clippy::missing_safety_doc)]
#![allow(unused_imports)]
#![allow(unused_variables)]
#![allow(unused_mut)]
#![allow(dead_code)]
#![allow(clippy::let_unit_value)]
#![allow(clippy::unused_unit)]
#![allow(clippy::let_and_return)]
#![allow(missing_docs)]
#![allow(unsafe_op_in_unsafe_fn, unsafe_attr_outside_unsafe)]

use std::sync::OnceLock;
use std::sync::Mutex;
use futures_util::stream::BoxStream;
use futures_util::StreamExt;
use jni::{AttachGuard, Env, EnvUnowned};
use jni::objects::{JClass, JObject, JString};
use jni::sys::{jboolean, jbyteArray, jlong, jstring};
use tokio::runtime::Runtime;

use demo as core_crate;
use core_crate::*;

const ERROR_CLASS: &str = "dev/sample_crate/demo/DemoBridgeException";
fn runtime() -> &'static Runtime {
    // 16 MiB: tokio's ~2 MB default worker stack can overflow on a deep extraction
    // future (a nested archive member, a multi-stage OCR pipeline), and a stack overflow
    // aborts the process with SIGBUS instead of raising a catchable panic.
    const SHARED_RUNTIME_STACK_SIZE_BYTES: usize = 16 * 1024 * 1024;
    static RT: OnceLock<Runtime> = OnceLock::new();
    RT.get_or_init(|| {
        tokio::runtime::Builder::new_multi_thread()
            .enable_all()
            .thread_stack_size(SHARED_RUNTIME_STACK_SIZE_BYTES)
            .build()
            .expect("create tokio runtime")
    })
}

fn jstring_to_string(env: &mut Env<'_>, s: JString) -> std::result::Result<String, jni::errors::Error> {
    s.try_to_string(env)
}

fn string_to_jstring(env: &mut Env<'_>, s: impl AsRef<str>) -> jstring {
    match env.new_string(s.as_ref()) {
        Ok(o) => o.into_raw(),
        Err(_) => std::ptr::null_mut(),
    }
}

fn jni_call_string_method(env: &mut Env<'_>, obj: JObject, method_name: &str, method_sig: &str) -> std::result::Result<String, jni::errors::Error> {
    use std::str::FromStr;
    let class = env.get_object_class(&obj)?;
    let name_jni = jni::strings::JNIString::from(method_name);
    let sig_runtime = jni::signature::RuntimeMethodSignature::from_str(method_sig)?;
    let sig = sig_runtime.method_signature();
    let method_id = env.get_method_id(&class, name_jni, sig)?;
    // SAFETY: method_id is valid from the preceding get_method_id call, and the method exists on the class.
    let result = unsafe { env.call_method_unchecked(&obj, method_id, jni::signature::ReturnType::Object, &[])? }
        .l()?;
    // SAFETY: JNI return type guaranteed a String, so the raw jstring pointer is valid.
    let jstring = unsafe { JString::from_raw(env, result.into_raw()) };
    jstring_to_string(env, jstring)
}

fn throw_jni_error(env: &mut Env<'_>, msg: &str) {
    // If the error class cannot be found (misconfigured AAR), fall back to a
    // generic RuntimeException so the caller always gets *some* exception rather
    // than a silent null/zero return that looks like a valid result.
    let class_jni = jni::strings::JNIString::from(ERROR_CLASS);
    let msg_jni = jni::strings::JNIString::from(msg);
    if env.throw_new(&class_jni, &msg_jni).is_err() {
        let fallback = jni::strings::JNIString::from("java/lang/RuntimeException");
        let _ = env.throw_new(&fallback, &msg_jni);
    }
}

fn run_or_throw<T, F>(env: &mut Env<'_>, f: F) -> Option<T>
where
    F: FnOnce(&mut Env<'_>) -> T,
{
    match std::panic::catch_unwind(std::panic::AssertUnwindSafe(|| f(env))) {
        Ok(v) => Some(v),
        Err(payload) => {
            let msg = payload.downcast_ref::<String>().cloned()
                .or_else(|| payload.downcast_ref::<&str>().map(|s| (*s).to_string()))
                .unwrap_or_else(|| "panic in native code".to_string());
            throw_jni_error(env, &format!("native panic: {msg}"));
            None
        }
    }
}

/// Call a trait-bridge dispatcher's `dispatch(String, String) -> String` entry
/// point. Used by the generated plugin bridges to route trait method calls to
/// the JVM host object as JSON.
#[allow(dead_code)]
fn jni_dispatch_json(
    env: &mut Env<'_>,
    obj: &JObject,
    method: &str,
    args_json: &str,
) -> std::result::Result<String, jni::errors::Error> {
    use std::str::FromStr;
    let class = env.get_object_class(obj)?;
    let name_jni = jni::strings::JNIString::from("dispatch");
    let sig_runtime = jni::signature::RuntimeMethodSignature::from_str(
        "(Ljava/lang/String;Ljava/lang/String;)Ljava/lang/String;",
    )?;
    let sig = sig_runtime.method_signature();
    let method_id = env.get_method_id(&class, name_jni, sig)?;
    let method_j = env.new_string(method)?;
    let args_j = env.new_string(args_json)?;
    // SAFETY: method_id comes from get_method_id on this object's class and the
    // argument values match the looked-up signature.
    let call = unsafe {
        env.call_method_unchecked(
            obj,
            method_id,
            jni::signature::ReturnType::Object,
            &[
                jni::objects::JValue::Object(&method_j).as_jni(),
                jni::objects::JValue::Object(&args_j).as_jni(),
            ],
        )
    };
    let result = match call.and_then(|v| v.l()) {
        Ok(o) => o,
        Err(e) => {
            // A pending Java exception must be cleared before further JNI calls.
            if env.exception_check() {
                env.exception_clear();
            }
            return Err(e);
        }
    };
    // SAFETY: the dispatcher's `dispatch` method returns a Java String.
    let jstr = unsafe { JString::from_raw(env, result.into_raw()) };
    jstring_to_string(env, jstr)
}
#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_sample_1crate_demo_DemoBridge_nativeCreateClient(
    mut env: EnvUnowned,
    _class: JClass,
    api_key: JString,
) -> jlong {
    // SAFETY: env is a valid EnvUnowned passed by the JVM for this native call frame.
    let mut __jni_attach_guard = unsafe { jni::AttachGuard::from_unowned(env.as_raw()) };
    let env = __jni_attach_guard.borrow_env_mut();
    let Some(__jni_result) = run_or_throw(env, |env| {
    let api_key = match jstring_to_string(env, api_key) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(env, &e.to_string()); return 0; }
    };
    let result = runtime().block_on(core_crate::create_client(api_key));
    match result {
        Err(e) => {
            throw_jni_error(env, &e.to_string());
            0
        }
        Ok(v) => {
            Box::into_raw(Box::new(v)) as jlong
        }
    }
    }) else {
        return 0;
    };
    __jni_result
}
#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_sample_1crate_demo_DemoBridge_nativeDemoClientDoThing(
    mut env: EnvUnowned,
    _class: JClass,
    handle: jlong,
    request_json: JString,
) -> jstring {
    // SAFETY: env is a valid EnvUnowned passed by the JVM for this native call frame.
    let mut __jni_attach_guard = unsafe { jni::AttachGuard::from_unowned(env.as_raw()) };
    let env = __jni_attach_guard.borrow_env_mut();
    let Some(__jni_result) = run_or_throw(env, |env| {
    if handle == 0 {
        throw_jni_error(env, "native handle must not be zero");
        return std::ptr::null_mut();
    }
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let req_str = match jstring_to_string(env, request_json) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(env, &format!("{e}")); return std::ptr::null_mut(); }
    };
    let input: String = match serde_json::from_str(&req_str) {
        Ok(s) => s,
        Err(_) => req_str,
    };
    let v = runtime().block_on(client.do_thing(input));
    string_to_jstring(env, v)
    }) else {
        return std::ptr::null_mut();
    };
    __jni_result
}
#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_sample_1crate_demo_DemoBridge_nativeDemoClientPing(
    mut env: EnvUnowned,
    _class: JClass,
    handle: jlong,
) -> jboolean {
    // SAFETY: env is a valid EnvUnowned passed by the JVM for this native call frame.
    let mut __jni_attach_guard = unsafe { jni::AttachGuard::from_unowned(env.as_raw()) };
    let env = __jni_attach_guard.borrow_env_mut();
    let Some(__jni_result) = run_or_throw(env, |env| {
    if handle == 0 {
        throw_jni_error(env, "native handle must not be zero");
        return false;
    }
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let v = runtime().block_on(client.ping());
    v
    }) else {
        return false;
    };
    __jni_result
}
#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_sample_1crate_demo_DemoBridge_nativeDemoClientFetchBlob(
    mut env: EnvUnowned,
    _class: JClass,
    handle: jlong,
) -> jbyteArray {
    // SAFETY: env is a valid EnvUnowned passed by the JVM for this native call frame.
    let mut __jni_attach_guard = unsafe { jni::AttachGuard::from_unowned(env.as_raw()) };
    let env = __jni_attach_guard.borrow_env_mut();
    let Some(__jni_result) = run_or_throw(env, |env| {
    if handle == 0 {
        throw_jni_error(env, "native handle must not be zero");
        return std::ptr::null_mut();
    }
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let v = runtime().block_on(client.fetch_blob());
    match env.byte_array_from_slice(&v) {
        Ok(arr) => { use jni::objects::JObject; JObject::from(arr).into_raw() as jbyteArray }
        Err(_) => std::ptr::null_mut(),
    }
    }) else {
        return std::ptr::null_mut();
    };
    __jni_result
}
#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_sample_1crate_demo_DemoBridge_nativeFreeDemoClient(
    mut env: EnvUnowned,
    _class: JClass,
    handle: jlong,
) {
    // SAFETY: env is a valid EnvUnowned passed by the JVM for this native call frame.
    let mut __jni_attach_guard = unsafe { jni::AttachGuard::from_unowned(env.as_raw()) };
    let env = __jni_attach_guard.borrow_env_mut();
    let Some(()) = run_or_throw(env, |_env| {
    if handle == 0 { return; }
    // SAFETY: `handle` was allocated by the matching constructor shim and
    // ownership is transferred back here for drop via Box::from_raw.
    unsafe { let _ = Box::from_raw(handle as *mut core_crate::DemoClient); }
    }) else {
        return;
    };
}
type DemoClientStreamDataStreamHandleItem = std::result::Result<core_crate::DataChunk, Box<dyn std::error::Error + Send + Sync + 'static>>;
type DemoClientStreamDataStreamHandleStream = BoxStream<'static, DemoClientStreamDataStreamHandleItem>;

struct DemoClientStreamDataStreamHandle {
    rt: &'static Runtime,
    stream: Mutex<Option<DemoClientStreamDataStreamHandleStream>>,
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_sample_1crate_demo_DemoBridge_nativeDemoClientStreamDataStart(
    mut env: EnvUnowned,
    _class: JClass,
    client_handle: jlong,
    request_json: JString,
) -> jlong {
    // SAFETY: env is a valid EnvUnowned passed by the JVM for this native call frame.
    let mut __jni_attach_guard = unsafe { jni::AttachGuard::from_unowned(env.as_raw()) };
    let env = __jni_attach_guard.borrow_env_mut();
    let Some(__jni_result) = run_or_throw(env, |env| {
    if client_handle == 0 {
        throw_jni_error(env, "native handle `client_handle` must not be zero");
        return 0;
    }
    // SAFETY: client_handle was produced by the matching constructor shim.
    let client: &core_crate::DemoClient = unsafe { &*(client_handle as *const core_crate::DemoClient) };
    let req_str = match jstring_to_string(env, request_json) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(env, &e.to_string()); return 0; }
    };
    let request: core_crate::StreamRequest = match serde_json::from_str(&req_str) {
        Ok(v) => v,
        Err(e) => { throw_jni_error(env, &e.to_string()); return 0; }
    };
    let stream_result = runtime().block_on(async { client.stream_data(request).await });
    let stream = match stream_result {
        Ok(s) => s,
        Err(e) => { throw_jni_error(env, &e.to_string()); return 0; }
    };
    // Map the concrete error type to Box<dyn Error> so the handle type is
    // independent of the stream's error associated type.
    let mapped = {
        use futures_util::StreamExt;
        Box::pin(stream.map(|r| r.map_err(|e| -> Box<dyn std::error::Error + Send + Sync + 'static> { Box::new(e) })))
    };
    let handle = Box::new(DemoClientStreamDataStreamHandle {
        rt: runtime(),
        stream: Mutex::new(Some(mapped)),
    });
    Box::into_raw(handle) as jlong
    }) else {
        return 0;
    };
    __jni_result
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_sample_1crate_demo_DemoBridge_nativeDemoClientStreamDataNext(
    mut env: EnvUnowned,
    _class: JClass,
    stream_handle: jlong,
) -> jstring {
    // SAFETY: env is a valid EnvUnowned passed by the JVM for this native call frame.
    let mut __jni_attach_guard = unsafe { jni::AttachGuard::from_unowned(env.as_raw()) };
    let env = __jni_attach_guard.borrow_env_mut();
    let Some(__jni_result) = run_or_throw(env, |env| {
    if stream_handle == 0 { return std::ptr::null_mut(); }
    // SAFETY: stream_handle was produced by the matching Start shim.
    let h = unsafe { &*(stream_handle as *const DemoClientStreamDataStreamHandle) };
    let mut guard = match h.stream.lock() {
        Ok(g) => g,
        Err(_) => return std::ptr::null_mut(),
    };
    let Some(stream) = guard.as_mut() else { return std::ptr::null_mut(); };
    let next = h.rt.block_on(stream.next());
    match next {
        None => std::ptr::null_mut(),
        Some(Err(e)) => {
            throw_jni_error(env, &e.to_string());
            std::ptr::null_mut()
        }
        Some(Ok(chunk)) => {
            let s = match serde_json::to_string(&chunk) {
                Ok(s) => s,
                Err(e) => {
                    throw_jni_error(env, &format!("serialize: {e}")); return std::ptr::null_mut();
                }
            };
            string_to_jstring(env, s)
        }
    }
    }) else {
        return std::ptr::null_mut();
    };
    __jni_result
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_sample_1crate_demo_DemoBridge_nativeDemoClientStreamDataFree(
    mut env: EnvUnowned,
    _class: JClass,
    stream_handle: jlong,
) {
    // SAFETY: env is a valid EnvUnowned passed by the JVM for this native call frame.
    let mut __jni_attach_guard = unsafe { jni::AttachGuard::from_unowned(env.as_raw()) };
    let env = __jni_attach_guard.borrow_env_mut();
    let Some(()) = run_or_throw(env, |_env| {
    if stream_handle == 0 { return; }
    // SAFETY: stream_handle was produced by the matching Start shim.
    unsafe { let _ = Box::from_raw(stream_handle as *mut DemoClientStreamDataStreamHandle); }
    }) else {
        return;
    };
}
